# escape_room

./: .gitignore  LICENSE  README.md  pyproject.toml
escape_room/: __init__.py  __version__.py  auth.py  config.schema  db.py  notes.py  puzzle.py  reader.py  room.py  scene.py  schema.sql
escape_room/campaigns/: game.json  game_trial.json
escape_room/templates/: base.html
escape_room/templates/auth/: login.html  register.html
escape_room/templates/puzzle/: index.html  notes.html  puzzle.html  winner.html
escape_room/templates/scene/: index.html  scene.html
tests/: conftest.py  test_auth.py  test_db.py  test_factory.py  test_notes.py  test_puzzle.py
