[project]
name = "virtual_escape_room"
version = "0.0.1"
description = "A basic virtual escape room"
dependencies = [
    "flask", "jsonschema"
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["escape_room"]
